--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 2;
 }
 
 .top-header .header__top, .top-header .header__bottom{
@@ -25,6 +26,10 @@
     width: 33%;
 }
 
+.top-header .header__bottom .header__column:first-child{
+    color: rgba(255, 255, 255, 0.5);
+}
+
 .top-header .header__column:last-child{
     text-align: right;
 }
@@ -35,4 +40,8 @@
 
 .top-header .header__number {
     color: yellow;
+}
+
+.top-header a {
+    color: white;
 }
