--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,13 @@
 @import 'reset.css';
 @import 'header.css';
 @import 'global.css';
-@import 'navigation.css'
+@import 'navigation.css';
+@import 'search-bar.css';
+@import 'friends.css';
+@import 'chats.css';
+@import 'find.css';
+@import 'more.css';
+@import 'profile.css';
+@import 'chat.css';
+@import 'bigScreen.css';
+@import 'mobile.css';
